# lifting-framework

./: .gitignore  README.md  cabal.project.local  lifting-framework.cabal
src/: RunAnalysis.hs
src/Memoization/Core/: Memory.hs  State.hs  VarMem.hs
src/Rewriting/: MonadifiedFunctions.hs  RewriteScript.hs  TargetModule.hs  TermMapping.hs
src/Rewriting/Rules/: MonadifiedFunctions.hs  RewriteScript.hs  TermMapping.hs
src/Rewriting/Targets/: MonadifiedFib.hs  TokenCountA.hs  TokenCountADeep.hs  TokenCountADeepMemo.hs  TokenCountAMemo.hs  TokenCountMonadBoth.hs  TokenCountMonadMemo.hs  TokenCountMonadVar.hs
src/Rewriting/Targets/CFG/: CFG.hs  CFGParser.hs  NodeTypes.hs  VCFG.hs
src/Rewriting/Targets/Return/: Return.hs  ReturnMemo.hs  ReturnMonad.hs  ReturnMonadVar.hs
src/Rewriting/Targets/TokenCount/: TokenCount.hs  TokenCountMonadBoth.hs  TokenCountMonadMemo.hs  TokenCountMonadVar.hs
src/Variability/: Parse.hs  VarLib.hs  VarTransformer.hs  VarTypes.hs
src/Variability/Legacy/: VarTypes.hs
