cabal-version:      3.4
name:               lifting-framework
version:            0.1.0.0

author:             BrunoMWorm
maintainer:         brunomatissek.worm@gmail.com

build-tools:         alex, happy

extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        Memoization.Core.State
        Memoization.Core.Memory
        Rewriting.Targets.MonadifiedFib
        Rewriting.Targets.TokenCountA
        Rewriting.Targets.TokenCountADeep
        Rewriting.Targets.TokenCountAMemo
        Rewriting.Targets.TokenCountADeepMemo
        Rewriting.Targets.TokenCountMonadBoth
        Rewriting.Targets.TokenCountMonadMemo
        Rewriting.Targets.TokenCountMonadVar
        Rewriting.Rules.MonadifiedFunctions
        Rewriting.Rules.RewriteScript
        Rewriting.Rules.TermMapping
        Variability.VarLib
        Variability.VarTransformer
        Variability.Legacy.VarTypes

    other-extensions:
        InstanceSigs TupleSections FlexibleInstances LambdaCase
        MultiParamTypeClasses PatternSynonyms CPP
        GeneralizedNewtypeDeriving OverlappingInstances MagicHash

    build-depends:
        base >= 4.12.0.0 && < 4.19.0.0,
        array > 0.4.0.0 && < 0.6.0.0,
        cudd == 0.1.0.4,
        hashtables == 1.3.1,
        hashable == 1.4.3.0,
        retrie == 1.2.2,
        ghc-paths >= 0.1.0.0,
        vector >= 0.13.0.0,
        transformers == 0.5.6.2
    ghc-options: -fno-ignore-asserts
    hs-source-dirs:   src
    default-language: Haskell2010
