cabal-version:      3.4
name:               lifting-framework
version:            0.1.0.0

author:             BrunoMWorm
maintainer:         brunomatissek.worm@gmail.com

extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        Memoization.Core.State
        Memoization.Core.Memory
        Rewriting.Targets.CFG.CFG
        Rewriting.Targets.CFG.VCFG
        Rewriting.Targets.CFG.NodeTypes
        Rewriting.Targets.Return.Return
        Rewriting.Targets.Return.ReturnMemo
        Rewriting.Targets.Return.ReturnMonad
        Rewriting.Targets.TokenCount.TokenCount
        Rewriting.Targets.TokenCount.TokenCountMonadBoth
        Rewriting.Targets.TokenCount.TokenCountMonadMemo
        Rewriting.Targets.TokenCount.TokenCountMonadVar
        Rewriting.Rules.MonadifiedFunctions
        Rewriting.Rules.RewriteScript
        Rewriting.Rules.TermMapping
        Variability.VarLib
        Variability.VarTransformer

    other-extensions:
        InstanceSigs TupleSections FlexibleInstances LambdaCase
        MultiParamTypeClasses PatternSynonyms CPP
        GeneralizedNewtypeDeriving OverlappingInstances MagicHash

    build-depends:
        base >= 4.12.0.0 && < 4.19.0.0,
        array > 0.4.0.0 && < 0.6.0.0,
        cudd >= 0.1.0.4,
        hashtables >= 1.3.1,
        hashable >= 1.4.3.0,
        retrie >= 1.2.2,
        ghc-paths >= 0.1.0.0,
        vector >= 0.13.0.0,
        transformers >= 0.5.6.2,
        text >= 1.2.5.0,
        more-containers >= 0.2.2.2,
        language-c >= 0.9.2,
        deepseq >= 1.4.6.1
    ghc-options: -fno-ignore-asserts
    hs-source-dirs:   src
    default-language: Haskell2010
